fixed overflow-x in team section

--- a/src/app/components/team-section/team-section.component.scss
+++ b/src/app/components/team-section/team-section.component.scss
@@ -17,6 +17,8 @@
   margin: 0;
   inset: 0;
   background: rgba(gray, 0.1);
+  overflow: hidden;
+
 }
 
 .team{
@@ -35,9 +37,10 @@
 }
 
 .bec {
+  margin: 0 auto;
   position: absolute;
-  width: 930px;
-  top: 50%;
+  width: adaptive-size(930, 500);
+  top: 42%;
   left: 50%;
   transform: translate(-50%, -50%);
   object-fit: cover;
